--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea
 .php_cs
 .php_cs.cache
+.php-cs-fixer.php
+.php-cs-fixer.cache
 .phpunit.result.cache
 build
 composer.lock
@@ -10,4 +12,3 @@ docs
 phpunit.xml
 psalm.xml
 vendor
-.php-cs-fixer.cache
