--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1"
+        "php": "^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "orchestra/testbench": "^6.19|^7.0",
         "phpunit/phpunit": "^9.0",
         "psalm/plugin-laravel": "^2.0",
+        "rector/rector": "^0.15.2",
         "vimeo/psalm": "^4.3"
     },
     "autoload": {
