--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "orchestra/testbench": "^6.19|^7.0",
+        "orchestra/testbench": "^6.19|^7.0|^8.0",
         "phpunit/phpunit": "^9.0",
         "psalm/plugin-laravel": "^2.0",
         "rector/rector": "^0.15.2",
